tdf#117581 impress: fix selection overlay after moving table

Change-Id: Ie5afa4fbddf86c6692a7ed68af9ef990c2f9f487
Reviewed-on: https://gerrit.libreoffice.org/54493
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>